Committing lines of GPT_Translation-Copy1.ipynb

--- a/GPT_Translation-Copy1.ipynb
+++ b/GPT_Translation-Copy1.ipynb
@@ -8,3 +8,13 @@
    "outputs": [],
    "source": [
     "import textwrap\n",
+    "import os\n",
+    "import openai\n",
+    "import tiktoken\n",
+    "from dotenv import load_dotenv, find_dotenv\n",
+    "_ = load_dotenv(find_dotenv()) # read local .env file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
