Committing lines of GPT_Translation-Copy1.ipynb

--- a/GPT_Translation-Copy1.ipynb
+++ b/GPT_Translation-Copy1.ipynb
@@ -18,3 +18,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "df0246fe",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "235 235\n"
