Committing lines of GPT_Translation-Copy1.ipynb

--- a/GPT_Translation-Copy1.ipynb
+++ b/GPT_Translation-Copy1.ipynb
@@ -28,3 +28,13 @@
      "output_type": "stream",
      "text": [
       "235 235\n"
+     ]
+    }
+   ],
+   "source": [
+    "def wrap_text(text, width=120):\n",
+    "    wrapper = textwrap.TextWrapper(width=width)\n",
+    "    return wrapper.fill(text=text)\n",
+    "\n",
+    "def tokenize_file(file_path,model):\n",
+    "    with open(file_path, 'r', encoding=\"utf8\") as file:\n",
