Committing lines of GPT_Translation-Copy1.ipynb

--- a/GPT_Translation-Copy1.ipynb
+++ b/GPT_Translation-Copy1.ipynb
@@ -38,3 +38,13 @@
     "\n",
     "def tokenize_file(file_path,model):\n",
     "    with open(file_path, 'r', encoding=\"utf8\") as file:\n",
+    "        text = file.read()\n",
+    "    encoding = tiktoken.get_encoding(model)\n",
+    "    tokens = encoding.encode(text)\n",
+    "    return tokens\n",
+    "\n",
+    "def split_tokens_into_chunks(tokens, chunk_size):\n",
+    "    num_chunks = (len(tokens) + chunk_size - 1) // chunk_size\n",
+    "    chunks = [tokens[i * chunk_size:(i + 1) * chunk_size] for i in range(num_chunks)]\n",
+    "    return chunks\n",
+    "\n",
