Committing lines of GPT_Translation-Copy1.ipynb

--- a/GPT_Translation-Copy1.ipynb
+++ b/GPT_Translation-Copy1.ipynb
@@ -48,3 +48,13 @@
     "    chunks = [tokens[i * chunk_size:(i + 1) * chunk_size] for i in range(num_chunks)]\n",
     "    return chunks\n",
     "\n",
+    "def convert_token_Chunks_into_text(token_chunks,model):\n",
+    "    encoding = tiktoken.get_encoding(model)\n",
+    "    text_chunks=[]\n",
+    "    for chunk in token_chunks:\n",
+    "        text_chunks.append(encoding.decode(chunk))\n",
+    "    return text_chunks\n",
+    "\n",
+    "def get_completion(prompt, model=\"gpt-3.5-turbo\"):\n",
+    "\n",
+    "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
