--- a/GPT_Translation-Copy1.ipynb
+++ b/GPT_Translation-Copy1.ipynb
@@ -58,3 +58,13 @@
     "def get_completion(prompt, model=\"gpt-3.5-turbo\"):\n",
     "\n",
     "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
+    "    response = openai.ChatCompletion.create(\n",
+    "\n",
+    "model=model,\n",
+    "\n",
+    "messages=messages,\n",
+    "\n",
+    "temperature=0,\n",
+    "\n",
+    "    )\n",
+    "\n",
