Committing lines of GPT_Translation-Copy1.ipynb

--- a/GPT_Translation-Copy1.ipynb
+++ b/GPT_Translation-Copy1.ipynb
@@ -68,3 +68,13 @@
     "\n",
     "    )\n",
     "\n",
+    "    print(\"here2\")\n",
+    "    return response.choices[0].message[\"content\"]\n",
+    "\n",
+    "def runner(template , text):\n",
+    "    query = template + text\n",
+    "    arabic_text = get_completion(query)\n",
+    "    return arabic_text"
+   ]
+  },
+  {
